--- a/styles/matches-styles.css
+++ b/styles/matches-styles.css
@@ -1,16 +1,11 @@
-/* Div of All Matches */
-#play-off-matches-div {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
+/* Main div of Group Table */
 #group-div {
     width: 60%;
     height: 250px;
     float: left;
 }
 
+/* Main div of Matches Table */
 #matches-div {
     width: 40%;
     height: 250px;
@@ -18,7 +13,6 @@
 }
 
 /* Play-Off Match Div */
-.play-off-match, 
 .knock-match {
     width: 100%;
     height: 80px;
@@ -137,7 +131,6 @@
     width: 300px;
     height: 56px;
     
-    margin-top: 76px;
     margin-left: auto;
     margin-right: auto;
     font-size: 27px;
