--- a/styles/share-styles.css
+++ b/styles/share-styles.css
@@ -13,9 +13,9 @@ div#winner-name {
 }
 
 input[name="user-name"] {
-    
+
 }
 
-input[name="description"] {
-
+textarea[name="description"] {
+    resize: none;
 }
