--- a/styles/game-styles.css
+++ b/styles/game-styles.css
@@ -1,3 +1,7 @@
+:root {
+    --name-div-gradient: linear-gradient(to right bottom, var(--gray-color-light), var(--gray-color-dark));
+}
+
 img#logo {
     position: relative;
     border: solid var(--logo-border-color) 17px;
@@ -18,6 +22,9 @@ img#logo {
 #header-div {
     padding-left: 80px;
     width: 100%;
+
+    position: relative;
+    z-index: 1;
 }
 
 /* Main Div */
@@ -27,8 +34,10 @@ img#logo {
     );
     width: 1000px;
     height: 580px;
-    position: static;
     text-align: center;
+
+    position: relative;
+    z-index: 0;
 
     border-radius: 30px;
     box-shadow: 30px 30px 30px #131123;
@@ -64,7 +73,7 @@ img#logo {
     -8px 8px 20px var(--shadow-color-2),
     8px -8px 20px var(--shadow-color-2);
 
-    background: linear-gradient(to right bottom, var(--gray-color-light), var(--gray-color-dark));
+    background: var(--name-div-gradient);
     border-radius: 20px;
 
     width: 80%;
