--- a/styles/main-page-styles.css
+++ b/styles/main-page-styles.css
@@ -1,8 +1,110 @@
 :root {
+    --pot-table-width: 210px;
+    --pot-table-margin: 10px;
+
+    --title-shadow-size-plus: 2px;
+    --title-shadow-size-minus: 2px;
     --bold-color: #40a450;
 }
 
 #logo-name b {
     color: var(--bold-color);
     text-shadow: 6px 6px 2px var(--basic-color);
+}
+
+.pots-round-name {
+    margin-bottom: 75px !important;
+}
+
+.title-div {
+    width: var(--pot-table-width);
+    
+    margin-left: var(--pot-table-margin);
+    margin-right: var(--pot-table-margin);
+
+    display: inline-block;
+}
+
+.title-div div {
+    width: 88%;
+    position: relative;
+    z-index: 0;
+    background: var(--name-div-gradient);
+
+    box-shadow: 
+    var(--title-shadow-size-plus) var(--title-shadow-size-plus) 12px var(--shadow-color-2),
+    var(--title-shadow-size-minus) var(--title-shadow-size-minus) 12px var(--shadow-color-2),
+    var(--title-shadow-size-minus) var(--title-shadow-size-plus) 12px var(--shadow-color-2),
+    var(--title-shadow-size-plus) var(--title-shadow-size-minus) 12px var(--shadow-color-2);
+    
+    border-radius: 6px;
+    color: white;
+    font: bold 25px 'Calibri';
+    margin-left: -20px;
+    float: left;
+}
+.title-div img {
+    width: 53px;
+    float: left;
+
+    margin-left: -8px;
+    margin-top: -10px;
+    position: relative;
+    z-index: 1;
+}
+
+#pots-div {
+    text-align: center;
+}
+
+.pot-table {
+    width: var(--pot-table-width);
+    display: inline-block;
+    box-shadow: 5px 5px 20px #808080, -5px -5px 20px #808080;
+
+    border-radius: 8px;
+    border-collapse: collapse;
+    
+    margin: var(--pot-table-margin);
+    overflow: hidden;
+}
+.pot-table tr {
+    background: linear-gradient(to right bottom, #e1e1e1, #b7b7b7);
+    border-collapse: collapse;
+}
+
+.pot-table td {
+    height: 26px;
+    border-bottom: solid var(--border-color) 3px;
+    border-collapse: collapse;
+}
+
+.pot-table img {
+    height: 80%;
+    margin-top: 4px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 3px #4e4e4e;
+}
+.pot-table input {
+    width: 90%;
+    height: 100%;
+
+    background-color: #0000;
+    outline: none;
+    border: none;
+
+    color: var(--font-color);
+    font: normal 14px 'Verdana';
+}
+.pot-table input::placeholder {
+    color: #a9a9a9;
+    font-size: 15px;
+}
+.pot-table input.bold {
+    font-weight: bold;
+}
+
+.pot-table .flag-elem {
+    padding-left: 5px;
+    text-align: center;
 }
