User Profile Photo & New Flags

--- a/styles/css-colors.css
+++ b/styles/css-colors.css
@@ -4,6 +4,7 @@
     --shadow-color-1-custom: #0d180d;
     --shadow-color-2-custom: #0d180d;
     --logo-border-color-custom: #949092;
+    --user-color-custom: #344e38;
 
     --button-color-1-custom: #195819;
     --button-color-2-custom: #093a09;
@@ -18,6 +19,7 @@
     --shadow-color-1-2022: #4e0b1f;
     --shadow-color-2-2022: #3d0919;
     --logo-border-color-2022: #949092;
+    --user-color-2022: #7d1433;
 
     --button-color-1-2022: #7d1433;
     --button-color-2-2022: #4e0b1f;
@@ -32,6 +34,7 @@
     --shadow-color-1-2018: #071d37;
     --shadow-color-2-2018: #0b2c54;
     --logo-border-color-2018: #0f407b;
+    --user-color-2018: #832728;
 
     --button-color-1-2018: #832728;
     --button-color-2-2018: #681f20;
@@ -46,6 +49,7 @@
     --shadow-color-1-2014: #29621C;
     --shadow-color-2-2014: #1c4313;
     --logo-border-color-2014: #48952c;
+    --user-color-2014: #346C1F;
 
     --button-color-1-2014: #864f10;
     --button-color-2-2014: #5b350a;
