--- a/styles/game-styles.css
+++ b/styles/game-styles.css
@@ -53,6 +53,7 @@ img#logo {
     width: 600px;
     height: 70px;
     margin-bottom: 90px;
+    position: relative;
 
     margin-left: auto;
     margin-right: auto;
@@ -66,7 +67,7 @@ img#logo {
     z-index: 1;
 }
 
-.round-name div:nth-child(2) {
+.round-name .name-div {
     box-shadow: 
     8px 8px 20px var(--shadow-color-2),
     -8px -8px 20px var(--shadow-color-2),
