--- a/styles/css-colors.css
+++ b/styles/css-colors.css
@@ -6,6 +6,9 @@
     --logo-border-color-custom: #949092;
     --user-color-custom: #344e38;
 
+    --logo-color-custom: #40a450;
+    --logo-shadow-color-custom: #344e38;
+
     --button-color-1-custom: #195819;
     --button-color-2-custom: #093a09;
     --button-first-color-custom: #40a450;
