--- a/styles/group-matches-styles.css
+++ b/styles/group-matches-styles.css
@@ -4,13 +4,13 @@
     background-color: gray;
     border-radius: 20px;
 
-    margin-left: auto;
+    margin-left: 46px;
     margin-right: auto;
     overflow: hidden;
 
     box-shadow: 
-    18px 18px 20px #808080,
-    -13px -13px 20px #808080;
+    15px 15px 20px #808080,
+    -11px -11px 20px #808080;
 }
 
 .group-match {
