--- a/styles/themes/theme-2014.css
+++ b/styles/themes/theme-2014.css
@@ -4,6 +4,7 @@
     --shadow-color-2: #1c4313;
     --logo-border-color: #48952c;
     --user-color: #346C1F;
+    --font-shadow-color: #346C1F;
 
     --button-color-1: #864f10;
     --button-color-2: #5b350a;
