--- a/styles/themes/theme-2016.css
+++ b/styles/themes/theme-2016.css
@@ -4,6 +4,7 @@
     --shadow-color-2: #cc1723;
     --logo-border-color: #023d8d;
     --user-color: #0b4391;
+    --font-shadow-color: #cc1723;
 
     --button-color-1: #002a64;
     --button-color-2: #001738;
