--- a/styles/themes/theme-2018.css
+++ b/styles/themes/theme-2018.css
@@ -4,6 +4,7 @@
     --shadow-color-2: #0b2c54;
     --logo-border-color: #0f407b;
     --user-color: #832728;
+    --font-shadow-color: #0c305d;
 
     --button-color-1: #832728;
     --button-color-2: #681f20;
