--- a/styles/themes/theme-2020.css
+++ b/styles/themes/theme-2020.css
@@ -4,6 +4,7 @@
     --shadow-color-2: #ca7900;
     --logo-border-color: #018498;
     --user-color: #3f4d17;
+    --font-shadow-color: #4d5e1d;
 
     --button-color-1: #006979;
     --button-color-2: #00515e;
