--- a/styles/themes/theme-2022.css
+++ b/styles/themes/theme-2022.css
@@ -4,6 +4,7 @@
     --shadow-color-2: #3d0919;
     --logo-border-color: #949092;
     --user-color: #7d1433;
+    --font-shadow-color: #7d1433;
 
     --button-color-1: #7d1433;
     --button-color-2: #4e0b1f;
